# MediaProcessPipeline

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.old.md  README.md  TODO.md  pyproject.toml  start-electron.bat  start-tauri.bat  start.bat
agentspace/2026-03-19/: analysis.md
agentspace/2026-03-21/: audio-to-text-models-survey.md  multi-type-expansion.md
agentspace/2026-03-22/: speaker-diarization-experiment.md  uvr-cuda-investigation.md
agentspace/2026-03-24/: bilibili-download-and-auth.md  mindmap-mapreduce-experiment.md
agentspace/2026-03-25/: hotwords-and-chapters.md  pipeline-parallelism-and-local-llm.md  task-queue-enhancement.md
agentspace/2026-03-26/: cli-redesign.md  mindmap-focus-iteration.md
agentspace/2026-03-28/: backend-security-audit.md  local-upload-pipeline-audit.md
agentspace/2026-03-29/: startup-optimization.md
backend/: .env.example  pyproject.toml  run.py
backend/app/: main.py
backend/app/agents/: base.py
backend/app/api/: chat.py
backend/app/cli/: __init__.py  __main__.py  client.py  display.py  main.py  serve.py
backend/app/core/: config.py  database.py  events.py  logging_setup.py  model_router.py  network.py  pipeline.py  queue.py  settings.py  source_normalization.py  source_resolver.py
backend/app/models/: __init__.py  chat.py  task.py
backend/app/services/: cleanup.py  history.py
backend/app/ui/: __init__.py  app.py
backup/processing/84f323e4_具身智能最有趣论文颁奖！/: metadata.json  summary.md  transcript.srt  transcript_polished.md
backup/processing/c2578937_翁家翌：OpenAI，GPT，强化学习，Infra，后训练，天授，tuixue，开源，CMU，清华｜WhynotTV Podcast #4/: metadata.json  summary.md  transcript.srt  transcript_polished.md
backup/processing/fdf94737_南方大雪来了：大范围雨雪冰冻跨过长江，台风洛鞍意外保护广东等/: metadata.json  summary.md  transcript.srt  transcript_polished.md
ccworkspace/2026-03-19/: improvements.md
doc/: execution-flow.md  models.yaml
docs/: TODO.md  architecture.md  execution-flow.md  model-runtime-strategy.md  models.yaml  oldREADME.md  pipeline.mmd  whisperx-integration-plan.md
docs/chat_history/: 20251204-gemini3-overall-design.txt
docs/superpowers/plans/: 2026-03-30-subtitle-fast-path.md  2026-03-31-chrome-extension.md
docs/superpowers/specs/: 2026-03-30-subtitle-fast-path-design.md  2026-03-31-chrome-extension-design.md
electron/: main.js  package-lock.json  package.json
experiment/: qwen3_local_smoketest.py
experiment/subtitle_ocr/: README.md  deeper_experiments.py  deeper_experiments_report.json  run_ocr.py  run_ocr_cs336.py  run_rapidocr.py  step1_detect_segments.py  step2_vlm_bbox.py  step3_ocr_extract.py
extension/: manifest.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
extension/src/: background.ts
extension/src/content/: bilibili.ts  types.ts  youtube.ts
extension/src/sidepanel/: App.tsx  index.html  index.tsx
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.config.ts
frontend/src/: App.tsx  App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: AppLayout.vue  ArchiveCard.vue  ArchiveDetailDialog.vue  Chat.tsx  FileSystemPicker.vue  MediaPlayer.vue  StatCard.vue  TaskDetailDialog.vue  TaskRow.vue
frontend/src/composables/: useLocale.ts  useSettings.ts  useTasks.ts  useTheme.ts
frontend/src/hooks/: use-chat-api.ts
frontend/src/types/: index.ts
frontend/src/utils/: srt.ts
frontend/src/views/: ArchivesView.vue  DashboardView.vue  SettingsView.vue  TasksView.vue
reference/: analysis-comparison.md
reference/ref_docs/Icons/: icons.md
reference/ref_docs/shadcn-ui/: components.md  shadcn-ui_install.md  similar_resources.md
script/: dev.ps1  setup.ps1
scripts/: backfill_duration.py  build-desktop.ps1  dev.ps1  dev.sh  generate_app_icon.py  monitor_task.py  mpp  mpp.ps1  probe_bili_sub_paths.py  probe_bili_subs_today.py  rebuild_tasks_db.py  setup.ps1  setup.sh  start-electron.ps1  stop.ps1  test_llm.py  test_pipeline.py
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: configuration.md  entrypoints-and-conventions.md  environment-and-serving.md  inspection-and-control.md  task-lifecycle.md
tests/: test_backend_api_smoke.py  test_bilibili_collection.py  test_bilibili_note_ingestion.py  test_bilibili_subtitle_config.py  test_bilibili_url_detection.py  test_filesystem_media.py  test_llm_polish_resilience.py  test_mindmap_outputs.py  test_model_router_asr.py  test_model_router_llm.py  test_model_router_multimodal_kb.py  test_model_router_service_registry.py  test_moss_cpp_asr.py  test_note_fallback_outputs.py  test_openai_client_network.py  test_pipeline_model_bindings.py  test_qwen3_gguf_asr.py  test_settings_document_migration.py  test_settings_profiles_and_pyannote.py  test_sqlite_artifacts.py  test_transcript_turn_merge.py  test_url_source_resolver.py  test_uvr_pipeline_guards.py  test_webpage_ingestion.py  test_xiaohongshu_ingestion.py  test_xiaoyuzhou_ingestion.py  test_youtube_ytdlp_options.py  test_zhihu_ingestion.py
web/: .gitignore  components.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/electron/: main.cjs  preload.cjs
web/src/: App.tsx  index.css  main.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/permissions/: backend.toml
web/src-tauri/src/: main.rs
web/src/components/: archive-card.tsx  delete-confirm-dialog.tsx  event-log.tsx  folder-queue-dialog.tsx  platform-icon.tsx  rename-dialog.tsx  result-viewer.tsx  settings-modal.tsx  settings-panel.test.tsx  settings-panel.tsx  speaker-merge-dialog.tsx  stats-bar.tsx  step-progress.tsx  submit-form.tsx  task-card.tsx  task-detail.tsx  task-queue-dropdown.tsx
web/src/hooks/: use-archives.ts  use-drop-zone.ts  use-media-sync.ts  use-preferences.ts  use-task-sse.ts  use-tasks.ts  use-view-position.ts
web/src/lib/: api.ts  archive-filters.ts  constants.ts  electron.ts  format.ts  markdown.ts  model-releases.ts  router.ts  settings-model-registry.test.ts  settings-model-registry.ts  settings-patch.test.ts  srt.ts  (+4 more)
(+113 files in other folders)
