[project]
name = "MediaProcessPipeline"
version = "0.3.0"
description = "Omni-Media Processing Pipeline - Convert audio/video to structured knowledge"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    # AI - OpenAI-compatible API (直连各 provider)
    "openai>=1.50.0",
    "python-multipart>=0.0.21",
    # CLI
    "typer>=0.15.0",
    "rich>=13.0.0",
    "youtube-transcript-api>=1.2.4",
]

[project.scripts]
mpp = "app.cli:_entry"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
# Local GGUF inference via llama-cpp-python (CUDA build)
# Install with: uv pip install llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu128
local-llm = [
    "llama-cpp-python>=0.3.0",
]
media = [
    "yt-dlp>=2024.0.0",
    # PyTorch GPU - CUDA 12.8 (cu128 索引)
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    # 音频处理 (UVR5 人声分离)
    "audio-separator[gpu]>=0.41.0",
    # 语音识别 (whisperx 依赖 pyannote-audio)
    "whisperx>=3.7.0",
    # Qwen3-ASR (可选, 支持本地模型)
    "qwen-asr>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["backend"]   # look for packages under backend/
include = ["app*"]    # only include app and its subpackages

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# ============================================================================
# UV 配置：强制使用 PyTorch CUDA 12.8 索引
# ============================================================================
# 4090 + CUDA 13.0 驱动向下兼容 CUDA 12.8
# torch~=2.8.0 满足 whisperx 和 pyannote-audio 要求
# ============================================================================

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# ============================================================================
# Force onnxruntime-gpu over onnxruntime
# ============================================================================
# faster-whisper pulls onnxruntime (CPU), which conflicts with onnxruntime-gpu
# pulled by audio-separator[gpu]. Both install the same `onnxruntime/` Python
# package, and the CPU variant wins, disabling CUDAExecutionProvider.
# Override forces uv to drop the CPU variant and use onnxruntime-gpu for both.
# ============================================================================
[tool.uv]
override-dependencies = [
    "onnxruntime ; sys_platform == 'never'",
]
