[project]
name = "MediaProcessPipeline"
version = "0.3.2"
description = "Omni-Media Processing Pipeline - Convert audio/video to structured knowledge"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    # AI - OpenAI-compatible API (直连各 provider)
    "openai>=1.50.0",
    "python-multipart>=0.0.21",
    # CLI
    "typer>=0.15.0",
    "rich>=13.0.0",
    "youtube-transcript-api>=1.2.4",
    "sqlite-vec>=0.1.6",
    # Media pipeline runtime dependencies
    "yt-dlp>=2024.0.0",
    # PyTorch GPU - CUDA 12.8 (cu128 索引)
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    # 音频处理 (UVR5 人声分离)
    "audio-separator[gpu]>=0.41.0",
    # Qwen3-ASR (支持本地模型)
    "qwen-asr>=0.0.6",
    # 说话人分离 / 声纹
    "pyannote-audio>=3.4.0",
    "litellm>=1.83.14",
]

[project.scripts]
mpp = "app.cli:_entry"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["backend"]   # look for packages under backend/
include = ["app*"]    # only include app and its subpackages

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# ============================================================================
# UV 配置：强制使用 PyTorch CUDA 12.8 索引
# ============================================================================
# 4090 + CUDA 13.0 驱动向下兼容 CUDA 12.8
# torch~=2.8.0 满足 qwen-asr 和 pyannote-audio 要求
# ============================================================================

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

